[project]
name = "python-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "ruff>=0.11.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]

[tool.mypy]
strict = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 120
indent-width = 4
exclude = ["build/", "dist/", ".venv/", "__pycache__/"]

[tool.ruff.lint]
select = ["E", "F", "I", "A", "B", "C", "N", "Q", "T"]
ignore = ["E203", "E701", "T201"]
